fix: font sizes icons for display on mobile

--- a/src/global.scss
+++ b/src/global.scss
@@ -139,7 +139,7 @@ h1 {
 
       .socialMediaLogos {
         .fa {
-          font-size: 2.25rem;
+          font-size: 3.95vh;
           width: 4.5vh;
           padding: 5px;
         }
@@ -590,8 +590,8 @@ footer {
             font-size: 3.36vh;
             display: grid;
             place-items: center; /* Centers content both vertically and horizontally */
-            width: 6.45vh;
-            height: 6.45vh;
+            width: 5vh;
+            height: 5vh;
             padding: 0.2rem;
           }
         }
